edit jenkinsfile to use bat instead of sh since we're on Windows

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -4,7 +4,7 @@ pipeline {
     stages {
         stage('test') {
             steps {
-                sh "python -m pytest test_sourceCode.py"
+                bat "python -m pytest test_sourceCode.py"
             }
         }
     }
