try without full path 2

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -4,6 +4,7 @@ pipeline {
     stages {
         stage('test') {
             steps {
+                echo %PATH%
                 bat "python -m pytest test_sourceCode.py"
             }
         }
